fixed issue with icons not showing in footer or share icons for post.

--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -10,7 +10,7 @@
 }
  
 ul.post-tags {
-  padding: 0;
+  padding: 5px;
   display: inline-flex;
   list-style: none;
 
